precompiled after config.asset.precompile+

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,6 +3,7 @@ logo.png: logo-5dfe46d20c9985384996022cf3854aa6.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-f79f879edae5d837e15161fba0ee9d3d.js
 application.css: application-7fec35a1825edc7b3d143fcc44ef91ba.css
+blueprint/ie.css: blueprint/ie-9ddea8104c9ac28ed3fec4df119da784.css
 blueprint/plugins/buttons/icons/cross.png: blueprint/plugins/buttons/icons/cross-c2651300ae2e326a9727177155b48bf7.png
 blueprint/plugins/buttons/icons/key.png: blueprint/plugins/buttons/icons/key-9db9f7ef5cb5f66d1dd4a2adfbf0a87b.png
 blueprint/plugins/buttons/icons/tick.png: blueprint/plugins/buttons/icons/tick-749c8298fcbfe4490ba9f7e4a9079637.png
@@ -19,4 +20,7 @@ blueprint/plugins/link-icons/icons/visited.png: blueprint/plugins/link-icons/ico
 blueprint/plugins/link-icons/icons/xls.png: blueprint/plugins/link-icons/icons/xls-590ac03632317af39267aa4dc073cbcc.png
 blueprint/plugins/link-icons/readme.txt: blueprint/plugins/link-icons/readme-afb2a5f5fc6a022cebaaf52caa1040c6.txt
 blueprint/plugins/rtl/readme.txt: blueprint/plugins/rtl/readme-2c9a8e5745485f1607d6700d3377cd03.txt
+blueprint/print.css: blueprint/print-759d34c9af5ad6c484e1e390334c3282.css
+blueprint/screen.css: blueprint/screen-1758e7dbde5da8dd6e26726785aa3d68.css
 blueprint/src/grid.png: blueprint/src/grid-99a56fe9528f46c2bbb7084a7e34bb4f.png
+custom.css: custom-0a621cab1d2a89c74be5aaad27e06a13.css
